<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.webprog26.datatask.activities.MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/island"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLoginName"
        android:lines="1"
        android:layout_above="@+id/etLoginPswd"
        android:hint="@string/hint_user_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLoginPswd"
        android:inputType="textPassword"
        android:lines="1"
        android:layout_above="@+id/layoutControls"
        android:hint="@string/hint_user_pswd"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutControls"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogLogin"
            android:text="@string/btn_login"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogRegister"
            android:text="@string/btn_register"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
