<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.webprog26.datatask.activities.RegisterActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/island"
        android:layout_above="@+id/layoutIslandsSpinner"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutIslandsSpinner"
        android:layout_above="@+id/etRegisterName"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/chbEnableIslandsSpinner"
            android:text="@string/select_island"
            android:checked="false"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinnerIslands" />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegisterName"
        android:lines="1"
        android:layout_above="@+id/etRegisterPswd"
        android:hint="@string/hint_user_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegisterPswd"
        android:inputType="textPassword"
        android:lines="1"
        android:layout_above="@+id/layoutControls"
        android:hint="@string/hint_user_pswd"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutControls"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegRegister"
            android:text="@string/btn_register"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegCancel"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
